# web_demo

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: basic_ci_flow.yaml
app/: __init__.py  routes.py
app/static/: base.css  face.css  main.css  modal.css  ocr.css
app/templates/: base.html  face.html  index.html  ocr.html
modules/face/: __init__.py  models.py
modules/ocr/: __init__.py  models.py
tests/: dummy.py  routes.py
