[project]
name = "web_demo"
version = "0.0.0"
description = "This is a very simple project to demonstrate what I can do in a nutshell."
authors = [
  { name = "", email = "" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.1",
    "opencv-python==4.11.0.86",
    "werkzeug==3.1.3",
    "easyocr==1.7.2",
    "tensorflow==2.19.0",
    "tf-keras==2.19.0",
    "retina-face==0.0.17",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "gunicorn==23.0.0"
]

[tool.ruff.lint]
select = ["ALL"]  # Enable all pydocstyle rules

[tool.ruff]
line-length = 120
ignore = ["ANN101"]